2013-07-29  Patrice Dumas  <pertusus@free.fr>

	* tp/Common.pm (enumerate_item_representation), Texinfo/Parser.pm:
	handle correctly @enumerate specification greater than 10.  Report
	from Dmitry Shachnev.

2013-06-28  Karl Berry  <karl@gnu.org>

	* contrib/perldoc-all/GNUmakefile (texi_pod_doc_incl): remove X<...>
	pod constructs, so we get good filenames.  For perl-5.18.0.

2013-06-25  Patrice Dumas  <pertusus@free.fr>

	* tp/Texinfo/Convert/HTML.pm: use "prev" for rel attribute and not 
	"previous", as prev is the preferred one.  Report by Tom Tromey.

2013-06-21  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\codedash): use \futurelet.
	(\codedashfinish): new definition for - inside @code et al.,
	which does not allow a break after a - when it is preceded or
	followed by another -, or when it is first.
	(\code): initialize \codedashprev for the - as first char case.
	Report from Arnold Robbins, 04 Apr 2013 01:30:28 -0600.

	* texi2dvi (run_makeinfo): more verbose error message if our
	test reading texinfo.tex fails.  Suggestion from Vincent B,
	25 May 2013 23:10:58.

2013-06-08  Sergey Poznyakoff  <gray@gnu.org.ua>

	Skip the current screen when repeating searches.

	* NEWS: Update.
	* doc/info-stnd.texi: Document the -a (--all) option and
	the search-skip-screen. Mention '}' and '{' commands when
	discussing repeated searches.
	* doc/version-stnd.texi: Update.
	* doc/version.texi: Update.
	* info/session.c (search_skip_screen_p): New variable.
	(info_search_1): Take additional argument, supplying the
	starting position for the search. All uses changed
	(DFL_START): New define.
	(info_search_next,info_search_previous): If search_skip_screen_p
	is set, skip the lines displayed on the screen.
	* info/variables.c (info_variables): New variable
	"search-skip-screen".
	* info/variables.h (min_search_length): New proto.

2013-06-07  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi (Preparing for @TeX{}): texinfo.cnf
	is a "configuration" file, other wording tweaks.
